# Rust-Projects

./: README.md
chat_serv/: Cargo.toml
chat_serv/src/: j_read.rs  j_write.rs  main.rs
chatbox/: Cargo.toml
chatbox/src/: lib.rs
mdrend/: Cargo.toml
mdrend/src/: main.rs
mdrend/test_data/: hello.md
pgrep/: Cargo.toml
pgrep/src/: main.rs
pgrep/test_data/: t1.txt  t2.txt
shop_base/: Cargo.toml
shop_base/migrations/2019-03-26-103937_create_items/: down.sql  up.sql
shop_base/src/: cli.rs  lib.rs  models.rs  schema.rs
shop_site/: Cargo.toml
shop_site/src/: main.rs
shop_site/test_site/static/: index.html
shop_site/test_site/templates/: item_list.html
