[package]
name = "shop_base"
version = "0.1.0"
authors = ["matthew <matt@storyfeet.com>"]
edition = "2018"

[[bin]]
name = "shop_cli"
path = "src/cli.rs"

[lib]
name = "shop_base"
path = "src/lib.rs"

[dependencies]

serde = "1.0.90"
serde_derive = "1.0.90"
diesel = {version = "1.4.1", features = ["postgres"]}
dotenv = "0.13.0"
failure = "0.1.5"
clap = "2.32.0"
